--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,6 +4,7 @@
     "declaration-no-important": true,
     "indentation": [2, {"ignore": ["inside-parens"]}],
     "property-no-vendor-prefix": [true, {ignoreProperties: ["box-orient", "line-clamp"]}],
-    "value-no-vendor-prefix": [true, {"ignoreValues": ["box"]}]
+    "value-no-vendor-prefix": [true, {"ignoreValues": ["box"]}],
+    "unit-no-unknown": [true, {"ignoreUnits": ["/^x/"]}],
   }
 }
